--- a/src/views/updatecrops.hbs
+++ b/src/views/updatecrops.hbs
@@ -111,12 +111,11 @@
                 >
                   Update crop details
                 </h1>
-                <div style="color: red;">
-                  <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+                <div style="position: sticky; background-color: white; text-align: center;">
+                  <p style="font-size: 20px; color: red;">{{messageFailure}}</p>
+                  <p style="font-size: 20px; color: green">{{messageSuccess}}</p>
                 </div>
-                <div style="color: green;">
-                  <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
-                </div>
+                <br>
                 <div class="design">
                   <form id="updatecrop-form" action="/users/updatecrops/{{crop._id}}" method="POST" enctype="multipart/form-data">
                     <h3></h3>
