--- a/src/views/viewfullprofile.hbs
+++ b/src/views/viewfullprofile.hbs
@@ -106,11 +106,9 @@
         <div style="text-align: center; position: sticky;">
         <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Profile</span> </h1>
         </div>
-        <div style="color: red;">
-          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
-        </div>
-        <div style="color: green;">
-          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+        <div style="position: sticky; background-color: white; text-align: center;">
+          <p style="font-size: 20px; color: red;">{{messageFailure}}</p>
+          <p style="font-size: 20px; color: green">{{messageSuccess}}</p>
         </div>
         <br>
         <section id="form-dom">
