--- a/src/views/admin_dashboard.hbs
+++ b/src/views/admin_dashboard.hbs
@@ -80,12 +80,11 @@
         <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Dashboard</span> </h1>
         </div>
         <br>
-        <div style="color: red;">
-          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+        <div style="position: sticky; background-color: white; text-align: center;">
+          <p style="font-size: 20px; color: red;">{{messageFailure}}</p>
+          <p style="font-size: 20px; color: green">{{messageSuccess}}</p>
         </div>
-        <div style="color: green;">
-          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
-        </div>
+        <br>
         <section id="form-dom">
         <div class="container" style="margin-bottom: 30px; opacity: 90%;">
           <div class="row">
