--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -214,12 +214,11 @@ overflow-y: auto;
     style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s; margin-bottom: 0px">
     <span style="background-color: #fff; font-size: 40px; color:#016168; padding:15px; opacity: 90%;">Chat</span>
   </h1>
-  <div style="color: red;">
-    <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+  <div style="position: sticky; background-color: white; text-align: center;">
+    <p style="font-size: 20px; color: red;">{{messageFailure}}</p>
+    <p style="font-size: 20px; color: green">{{messageSuccess}}</p>
   </div>
-  <div style="color: green;">
-    <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
-  </div>
+  <br>
   <div class="container" style="position: relative; opacity: 90%">
     <div class="row">
       <div class="col-12">
@@ -234,11 +233,6 @@ overflow-y: auto;
                   <a href="" class="btn btn-common btn-nv-sty" style="margin: 0px; padding: 8px; color:black; background:white">Block user</a>
                 </div>
               </div>
-              {{!-- <p style="font-size: 25px; padding-left: 30px; padding-top: 7px; padding-bottom:7px; background-color: #302d42; color: white">{{other_user.username}}
-                <div style="text-align: right;">
-                  <a href="" class="btn btn-common btn-nv-sty">Block</a>
-                </div>
-              </p> --}}
               <div class="mesgs" style="background-color: white;">
                 <div class="msg_history" style="display: flex; flex-direction: column-reverse">
                   <div>
