--- a/src/views/notifications.hbs
+++ b/src/views/notifications.hbs
@@ -95,12 +95,11 @@
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Notifications</span> 
     </h1>
     <br>
-    <div style="color: red;">
-      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+    <div style="position: sticky; background-color: white; text-align: center;">
+      <p style="font-size: 20px; color: red;">{{messageFailure}}</p>
+      <p style="font-size: 20px; color: green">{{messageSuccess}}</p>
     </div>
-    <div style="color: green;">
-      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
-    </div>
+    <br>
     {{#if notifications}}
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 30px; color:#016168; padding: 15px; opacity: 90%; color:black">Deals</span> 
