--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -137,11 +137,33 @@
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Farmer profiles</span> 
     </h1>
-    <div style="color: red;">
-      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+    <div style="position: sticky; background-color: white; text-align: center;">
+      <p style="font-size: 20px; color: red;">{{messageFailure}}</p>
+      <p style="font-size: 20px; color: green">{{messageSuccess}}</p>
     </div>
-    <div style="color: green;">
-      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+    <br>
+    <div class="row" style="position: sticky; background-color: #302d42; margin: 0 20px 20px 20px;">
+      <div class="col-lg-1 col-2"></div>
+      <div class="col-lg-1 col-4">
+        <label style="font-size: 20px; color: white; margin-top: 12px; margin-bottom: 7px">Sort by:</label>
+      </div>
+      <div class="col-lg-4 col-6">
+        <select name="sortby" class="custom-select" style="margin-top: 7px; margin-bottom: 7px;">
+          <option value="username">Username</option>
+          <option value="location">Location</option>
+          <option value="rating">Rating</option>
+          <option value="crops">Crops Grown</option>
+          <option value="area">Land area</option>
+        </select>
+      </div>
+      <div class="col-lg-4 col-6">
+        <input type="text" class="form-control" placeholder="Search" name="search" style="margin-top: 7px; margin-bottom: 7px" required/>
+      </div>
+      <div class="col-lg-2 col-2">
+        <button type="submit" href="" class="btn btn-common btn-nv-sty" style="margin-top: 7px; margin-bottom: 7px">
+          Search
+        </button>
+      </div>
     </div>
     {{#if profiles}}
     {{#each profiles}}
