--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -231,14 +231,10 @@ overflow-y: auto;
                   <p style="padding-left: 25px; padding-top: 7px; padding-bottom:7px; color: white; font-size: 25px;">{{other_user.username}}</p>
                 </div>
                 <div class="col" style="text-align: right;">
-                  <a href="" class="btn btn-common btn-nv-sty" style="margin: 0px; padding: 8px; color:black; background:white">Block user</a>
+                  <a href="/users/chat/block/{{other_user._id}}" class="btn btn-common btn-nv-sty" style="margin: 0px; padding: 8px; color:black; background:white">Block user</a>
                 </div>
               </div>
-              {{!-- <p style="font-size: 25px; padding-left: 30px; padding-top: 7px; padding-bottom:7px; background-color: #302d42; color: white">{{other_user.username}}
-                <div style="text-align: right;">
-                  <a href="" class="btn btn-common btn-nv-sty">Block</a>
-                </div>
-              </p> --}}
+              
               <div class="mesgs" style="background-color: white;">
                 <div class="msg_history" style="display: flex; flex-direction: column-reverse">
                   <div>
