--- a/src/views/chat_app_farmer.hbs
+++ b/src/views/chat_app_farmer.hbs
@@ -189,4 +189,31 @@
         </div>
     </div>
     {{/each}}
+  <br>
+    {{#if blocked}}
+    <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+       <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Blocked chats</span> 
+    </h1>
+    {{#each blocked}}
+    <div class="row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6 col-12">
+            <a href="/chat/{{this._id}}/{{this.room_id}}" style="color: black;">
+            <div class="card" style="opacity: 90%; height: 80px;">
+                <div class="card-body" style="padding: 10px;">
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="card-title" style="margin-bottom: 2px;">{{this.fullname}}</h5>
+                        </div>
+                        <div class="col" style="text-align: right;">
+                  <a href="/users/chat/unblock/{{this._id}}" class="btn btn-common btn-nv-sty" style="margin: 0px; padding: 8px; color:black; background:white">Unblock</a>
+                </div>
+                    </div>
+                </div>
+            </div>
+            </a>
+        </div>
+    </div>
+    {{/each}}
+    {{/if}}
 </div>
