--- a/src/views/registerbuyer.hbs
+++ b/src/views/registerbuyer.hbs
@@ -1,22 +1,22 @@
 {{#section 'style'}}
-  .cover {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  }
-  .content {
-  flex: 1 0 auto;
-  }
-  #contact {
-  flex-shrink: 0;
-  }
-  #mygif {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  }
+.cover {
+display: flex;
+flex-direction: column;
+height: 100%;
+}
+.content {
+flex: 1 0 auto;
+}
+#contact {
+flex-shrink: 0;
+}
+#mygif {
+position: fixed;
+right: 0;
+bottom: 0;
+min-width: 100%;
+min-height: 100%;
+}
 {{/section}}
 
 
@@ -24,96 +24,99 @@
 <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
   <div class="content">
-    <br><br>   
-      <section id="form-dom" class="services">
-        <div class="container" style="margin-bottom: 30px; opacity:90%">
-          <div class="row">
-            <div class="col-12">
-              <div class="col-12 col-md-12 col-lg-8 log-style">
-                <div id="form-main">
-                  <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="
+    <br><br>
+    <section id="form-dom" class="services">
+      <div class="container" style="margin-bottom: 30px; opacity:90%">
+        <div class="row">
+          <div class="col-12">
+            <div class="col-12 col-md-12 col-lg-8 log-style">
+              <div id="form-main">
+                <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="
                     visibility: visible;
                     -webkit-animation-delay: 0.2s;
                     -moz-animation-delay: 0.2s;
                     animation-delay: 0.2s;
                   ">
-                    Register as a Buyer
-                  </h1>
-                  <div style="color: red;">
-                    <p style="font-size: 15px; text-align: center">{{messageFailure}}</p>
-                  </div>
-                  <div style="color: green;">
-                    <p style="font-size: 15px; text-align: center">{{messageSuccess}}</p>
-                  </div>
-                  <div class="design">
-                    <form id="register-form"  method="POST" action="registerbuyer" enctype="multipart/form-data">
-                      <h3></h3>
-                      <div class="row">
-                        <div class="col">
-                          <input type="text" class="form-control" placeholder="Full Name" name="registername" />
-                        </div>
+                  Register as a Buyer
+                </h1>
+                <div style="color: red;">
+                  <p style="font-size: 15px; text-align: center">{{messageFailure}}</p>
+                </div>
+                <div style="color: green;">
+                  <p style="font-size: 15px; text-align: center">{{messageSuccess}}</p>
+                </div>
+                <div class="design">
+                  <form id="register-form" method="POST" action="registerbuyer" enctype="multipart/form-data"
+                    >
+                    <h3></h3>
+                    <div class="row">
+                      <div class="col">
+                        <input type="text" class="form-control" placeholder="Full Name" name="registername" />
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="text" class="form-control" placeholder="Username" name="username" required/>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <input type="text" class="form-control" placeholder="Username" name="username" required />
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="email" class="form-control" placeholder="Email Id" name="email"required/>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <input type="email" class="form-control" placeholder="Email Id" name="email" required />
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="Password" class="form-control" placeholder="Password" name="password" required/>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <input type="Password" class="form-control" placeholder="Password" name="password" required />
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="Password" class="form-control" placeholder="Confirm Password" name="password2" required/>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <input type="Password" class="form-control" placeholder="Confirm Password" name="password2"
+                          required />
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="text" class="form-control" placeholder="Pan number" name="pannumber" required/>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <input type="text" class="form-control" placeholder="Pan number" name="pannumber" required />
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="text" class="form-control"
-                            placeholder="Requirements(specify the names of crops you would usually prefer to buy)"
-                            name="requirements" required/>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <input type="text" class="form-control"
+                          placeholder="Requirements(specify the names of crops you would usually prefer to buy)"
+                          name="requirements" required />
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <label for="pancard">Upload image of Pan Card:</label>
-                          <input type="file" class="form-control" placeholder="Pancard" name="pancard" id="pancard" required/>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <label for="pancard">Upload image of Pan Card:</label>
+                        <input type="file" class="form-control" placeholder="Pancard" name="pancard" id="pancard"
+                          required />
                       </div>
-                      <div class="row">
-                        <div class="col" style="text-align: center;">
-                          <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 50%;">
-                            Register
-                          </button>
-                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col" style="text-align: center;">
+                        <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 50%;">
+                          Register
+                        </button>
                       </div>
+                    </div>
 
-                      <div class="row">
-                        <div class="col" style="text-align: center;">
-                          <a href="login" style="font-size: 20px">Already registered? Login here!</a>
-                        </div>
+                    <div class="row">
+                      <div class="col" style="text-align: center;">
+                        <a href="login" style="font-size: 20px">Already registered? Login here!</a>
                       </div>
-                    </form>
-                  </div>
+                    </div>
+                  </form>
                 </div>
               </div>
-              <div class="col-6"></div>
             </div>
+            <div class="col-6"></div>
           </div>
         </div>
-      </section>
-    
+      </div>
+    </section>
+
   </div>
 
   <!-- Go to Top Link -->
@@ -130,7 +133,7 @@
     }
   </script>
   <script>
-    $(document).ready(function () {
+    document.ready(function () {
       $(".fancybox").fancybox({
         openEffect: "none",
         closeEffect: "none"
