added developed by

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -67,6 +67,39 @@
                             solution for all.
                         </li>
                     </ul>
+                    <div class="br-line"></div>
+                    <br>
+                    <div style="text-align: center;">
+                      <h4>Developed by :</h4>
+                      <br>
+                      <div class="row">
+                        <div class="col">
+                          <p style="font-size: 25px; color: #016168">Arya Gandhi</p>
+                        </div>
+                        <div class="col">
+                          <p style="font-size: 25px; color: #016168">Vaishnavi Konde</p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                          <p style="font-size: 15px;">Student at College of Engineering, Pune</p>
+                        </div>
+                        <div class="col">
+                          <p style="font-size: 15px;">Student at College of Engineering, Pune</p>
+                        </div>
+                      </div>
+                      <br>
+                      <div class="row">
+                        <div class="col">
+                          <a href="https://www.linkedin.com/in/arya-gandhi-0080861aa" target="_blank"><i class="fa fa-linkedin-square" style="font-size:36px; padding: 10px; color: #0072b1"></i></a>
+                          <a href="https://github.com/AryaGandhi" target="_blank"><i class="fa fa-github" style="font-size:36px; padding: 10px; color:black"></i></i></a>
+                        </div>
+                        <div class="col">
+                          <a href="https://www.linkedin.com/in/vaishnavi-konde-360805180/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:36px; padding: 10px; color: #0072b1"></i></a>
+                          <a href="https://github.com/vkonde21" target="_blank"><i class="fa fa-github" style="font-size:36px; padding: 10px; color: black"></i></i></a>
+                        </div>
+                      </div>
+                    </div>
                   </div>
               </div>
               <div class="col-6"></div>
@@ -78,7 +111,7 @@
       <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-8 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="col-lg-6 col-8">
                     <h3>QUICK LINKS</h3>
                     <ul>
                         <li><a href="/users/login">LOGIN</a></li>
@@ -87,7 +120,7 @@
                         <li><a href="/users/help">HELP</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-6 col-12 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="col-lg-6 col-12">
                     <h3>CONTACT US</h3>
                     <p style="font-size:15px;">Reach out to us at :</p>
                     <br>
