--- a/src/views/chat_app_buyer.hbs
+++ b/src/views/chat_app_buyer.hbs
@@ -192,12 +192,12 @@
             <div class="card" style="opacity: 90%; height: 80px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
-                        <div class="col-7">
+                        <div class="col-8">
                             <h5 class="card-title" style="margin-bottom: 2px;">{{this.fullname}}</h5>
                             <p class="card-text">Crops grown : {{this.crops}}</p>
                         </div>
                         <div class="col-1" style="text-align: right;">
-                  <a href="/users/chat/unblock/{{this._id}}" class="btn btn-common btn-nv-sty" style="margin: 0px; padding: 8px; color:black; background:white">Unblock</a>
+                  <a href="/users/chat/unblock/{{this._id}}" class="btn btn-common btn-nv-sty" style="margin-top: 5px">Unblock</a>
                 </div>
                     </div>
                 </div>
