--- a/src/views/registerinvestor.hbs
+++ b/src/views/registerinvestor.hbs
@@ -182,7 +182,30 @@
       </div>
     </section>
     </div>
-    
+    <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-8">
+                    <h3>QUICK LINKS</h3>
+                    <ul>
+                        <li><a href="/users/login">LOGIN</a></li>
+                        <li><a href="/users/register">REGISTER</a></li>
+                        <li><a href="/users/about">ABOUT ORGANIQUE</a></li>
+                        <li><a href="/users/help">HELP</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <h3>CONTACT US</h3>
+                    <p style="font-size:15px;">Reach out to us at :</p>
+                    <br>
+                    <ul>
+                        <li>&emsp;Email id&emsp;:&emsp;gandhias18.comp@coep.ac.in</li>
+                        <li>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;kondevp10.comp@coep.ac.in</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Go to Top Link -->
     <a href="#" class="back-to-top">
         <i class="lni-chevron-up"></i>
