added validation checks

--- a/src/views/buyer_profile.hbs
+++ b/src/views/buyer_profile.hbs
@@ -139,7 +139,7 @@
                             <h3>Requirements</h3>
                           <input type="text" class="form-control"
                             placeholder="Requirements(specify the names of crops you would usually prefer to buy)"
-                            name="requirements" value="{{buyer.requirements}}" required/>
+                            name="croprequirements" value="{{buyer.requirements}}" required/>
                         </div>
                       </div>                    
                       <div class="row">
