--- a/src/views/institution_profile.hbs
+++ b/src/views/institution_profile.hbs
@@ -153,6 +153,7 @@
                           <h3>Starting range of investment</h3>
                         <input
                           type="text"
+                          min="0"
                           class="form-control"
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
@@ -166,6 +167,7 @@
                           <h3>Ending range of investment</h3>
                         <input
                           type="text"
+                          min="0"
                           class="form-control"
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
