--- a/src/views/investor_profile.hbs
+++ b/src/views/investor_profile.hbs
@@ -160,6 +160,7 @@
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
                           value="{{investor.start}}"
+                          min="0"
                           required
                         />
                       </div>
@@ -172,6 +173,7 @@
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
                           value="{{investor.end}}"
+                          min="0"
                           required
                         />
                       </div>
