--- a/src/views/registerinstitution.hbs
+++ b/src/views/registerinstitution.hbs
@@ -118,6 +118,7 @@
                           class="form-control"
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
+                          min="0"
                           required
                         />
                       </div>
@@ -129,6 +130,7 @@
                           class="form-control"
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
+                          min="0"
                           required
                         />
                       </div>
