--- a/src/views/registerinvestor.hbs
+++ b/src/views/registerinvestor.hbs
@@ -128,6 +128,7 @@
                           class="form-control"
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
+                          min="0"
                           required
                         />
                       </div>
@@ -139,6 +140,7 @@
                           class="form-control"
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
+                          min="0"
                           required
                         />
                       </div>
