--- a/src/views/farmer_profile.hbs
+++ b/src/views/farmer_profile.hbs
@@ -176,6 +176,7 @@
                           <h3>Area of land(in acres)</h3>
                         <input
                           type="number"
+                          min="0"
                           step="0.01"
                           class="form-control"
                           placeholder="Area of land(in acres)"
