--- a/src/views/investor_profile.hbs
+++ b/src/views/investor_profile.hbs
@@ -149,31 +149,31 @@
                     </div>
                     
                     
-                    <div class="row">
-                        <div class="col">Enter the starting and ending amount of range you are interested in investing:</div>
-                    </div>
-                    <div class="row">
+                   <div class="row">
                       <div class="col">
+                          <h3>Starting range of investment</h3>
                         <input
-                          type="number"
+                          type="text"
+                          min="0"
                           class="form-control"
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
                           value="{{investor.start}}"
-                          min="0"
                           required
                         />
                       </div>
                     </div>
+                    
                     <div class="row">
                       <div class="col">
+                          <h3>Ending range of investment</h3>
                         <input
-                          type="number"
+                          type="text"
+                          min="0"
                           class="form-control"
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
                           value="{{investor.end}}"
-                          min="0"
                           required
                         />
                       </div>
