changed location to district

--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -186,7 +186,7 @@
         <div class="card" style="opacity: 90%; height: 130px">
           <div class="card-body">
             <h5 class="card-title">Land area (in acres) : {{farmer.land_area}}</h5>
-            <h5 class="card-title">Location : {{farmer.location}}</h5>
+            <h5 class="card-title">District : {{farmer.location}}</h5>
           </div>
         </div>
       </div>
