--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -153,7 +153,7 @@
         
         <select name="sortby" class="custom-select" style="margin-top: 7px; margin-bottom: 7px;">
           <option value="username">Username</option>
-          <option value="location">Location</option>
+          <option value="location">District</option>
           <option value="rating">Rating</option>
           <option value="crops">Crops Grown</option>
           <option value="area">Land area</option>
@@ -190,7 +190,7 @@
             </p>
             <p class="card-text">Crops grown : {{2}} </p>
             <p class="card-text">Area of land : {{this.1.land_area}} acres</p>
-            <p class="card-text">Location : {{this.1.location}}</p>
+            <p class="card-text">District : {{this.1.location}}</p>
             <div class="row">
                 <div class="col-lg-6 col-6">
                   <a href="/chat/{{this.1._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">Chat</a>
@@ -217,7 +217,7 @@
             </p>
             <p class="card-text">Crops grown : {{4}}</p>
             <p class="card-text">Area of land : {{this.3.land_area}} acres</p>
-            <p class="card-text">Location : {{this.3.location}}</p>
+            <p class="card-text">District : {{this.3.location}}</p>
             <div class="row">
                 <div class="col-lg-6 col-6">
                   <a href="/chat/{{this.3._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">Chat</a>
