--- a/src/views/registerfarmer.hbs
+++ b/src/views/registerfarmer.hbs
@@ -149,7 +149,7 @@
                         <input
                           type="text"
                           class="form-control"
-                          placeholder="Location"
+                          placeholder="District"
                           name="location"
                           required
                         />
