--- a/src/views/verify_profile.hbs
+++ b/src/views/verify_profile.hbs
@@ -96,7 +96,7 @@
                 <br>
                 <p style="font-size: 20px;">Land area : {{profile.land_area}} acres</p>
                 <br>
-                <p style="font-size: 20px;">Location : {{profile.location}}</p>
+                <p style="font-size: 20px;">District : {{profile.location}}</p>
                 <br>
                 <p style="font-size: 20px;">Land ownership proof : </p>
                 <br>
