--- a/src/views/farmer_profile.hbs
+++ b/src/views/farmer_profile.hbs
@@ -152,10 +152,10 @@
                             Do you need an investor?
                         </div>
                         <div class="col-2">
-                            <input type="radio" name="investoryes" value="1">Yes</input>
+                            <input type="radio" name="investor" value="1" required>Yes</input>
                         </div>
                         <div class="col-2">   
-                            <input type="radio" name="investorno" value="0">No</input>
+                            <input type="radio" name="investor" value="0">No</input>
                         </div>
                     </div>
                     <br>
@@ -164,10 +164,10 @@
                             Do you need buyers for your organic produce?
                         </div>
                         <div class="col-2">
-                            <input type="radio" name="buyeryes" value="1">Yes</input>
+                            <input type="radio" name="buyer" value="1" required>Yes</input>
                         </div>
                         <div class="col-2">   
-                            <input type="radio" name="buyerno" value="0">No</input>
+                            <input type="radio" name="buyer" value="0">No</input>
                         </div>
                     </div>
                     <br>
