made file input type image only

--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -285,7 +285,7 @@ overflow-y: auto;
                       </p>
                       <span id="file-name" style="font-size: 13px; position: absolute; right: 20; top: 45;"></span>
                       </label>
-                      <input type="file" name="chatimage" id="chatimage" onchange="uploadFile(this)"/>
+                      <input type="file" accept="image/*" name="chatimage" id="chatimage" onchange="uploadFile(this)"/>
                       <button class="msg_send_btn" type="submit" id="chatbutton" name="chatbutton">
                         <i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
                     </form>
