--- a/src/views/registerinstitution.hbs
+++ b/src/views/registerinstitution.hbs
@@ -140,6 +140,7 @@
                         <label for="pancard">Upload image of Business Proof:</label>
                         <input
                           type="file"
+                          accept="image/*"
                           class="form-control"
                           placeholder="Pancard"
                           name="businessproof"
