--- a/src/views/registerinvestor.hbs
+++ b/src/views/registerinvestor.hbs
@@ -150,6 +150,7 @@
                         <label for="incomestatement">Upload your latest income statement:</label>
                         <input
                           type="file"
+                          accept="image/*"
                           class="form-control"
                           placeholder="Land ownership proof"
                           name="incomestatement"
