--- a/src/views/registerbuyer.hbs
+++ b/src/views/registerbuyer.hbs
@@ -90,7 +90,7 @@ min-height: 100%;
                     <div class="row">
                       <div class="col">
                         <label for="pancard">Upload image of Pan Card:</label>
-                        <input type="file" class="form-control" placeholder="Pancard" name="pancard" id="pancard"
+                        <input type="file" accept="image/*" class="form-control" placeholder="Pancard" name="pancard" id="pancard"
                           required />
                       </div>
                     </div>
