--- a/src/views/registerfarmer.hbs
+++ b/src/views/registerfarmer.hbs
@@ -160,6 +160,7 @@
                         <label for="landpaper">Upload land ownership proof:</label>
                         <input
                           type="file"
+                          accept="image/*"
                           class="form-control"
                           placeholder="Land ownership proof"
                           name="landpaper"
@@ -174,6 +175,7 @@
                         <label for="aadhar">Upload organic farming certificate:</label>
                         <input
                           type="file"
+                          accept="iamge/*"
                           class="form-control"
                           placeholder="Orgaanic farm certificate"
                           name="certificate"
