--- a/src/views/registerfarmer.hbs
+++ b/src/views/registerfarmer.hbs
@@ -175,7 +175,7 @@
                         <label for="aadhar">Upload organic farming certificate:</label>
                         <input
                           type="file"
-                          accept="iamge/*"
+                          accept="image/*"
                           class="form-control"
                           placeholder="Orgaanic farm certificate"
                           name="certificate"
