PAN number validation

--- a/src/views/registerinvestor.hbs
+++ b/src/views/registerinvestor.hbs
@@ -112,7 +112,7 @@
                         <input
                           type="text"
                           class="form-control"
-                          placeholder="Pan number"
+                          placeholder="PAN number"
                           name="pannumber"
                           required
                         />
