--- a/src/views/updatecrops.hbs
+++ b/src/views/updatecrops.hbs
@@ -127,6 +127,7 @@
                           placeholder="Name of the crop"
                           name="cropname"
                           value="{{crop.cropname}}"
+                          disabled
                         />
                       </div>
                     </div>
