changed minor validation conditions

--- a/src/views/updatecrops.hbs
+++ b/src/views/updatecrops.hbs
@@ -147,6 +147,7 @@
                         <label for="landpaper">Upload latest photo of the crop:</label>
                         <input
                           type="file"
+                          accept="image/*"
                           class="form-control"
                           placeholder="Image of the crop"
                           name="cropimage"
