--- a/src/views/investor_dashboard.hbs
+++ b/src/views/investor_dashboard.hbs
@@ -142,7 +142,7 @@
             <h5 class="card-title">New deal confirmation</h5>
             <p class="card-text">Enter the username of the farmer who you signed a deal with (It will reflect on your account after the farmer has confirmed the deal):</p>
             <form method="POST" action="deal_lock">
-              <input type="text" class="form-control" placeholder="Username of farmer" name="farmerusername" />
+              <input type="text" class="form-control" placeholder="Username of farmer" name="farmerusername" required/>
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-4">
