--- a/src/views/buyer_orders.hbs
+++ b/src/views/buyer_orders.hbs
@@ -156,7 +156,7 @@
               </p>
             {{else}}
             <form action="save_rating/{{this.1._id}}" method="POST">
-                <input type="number" step="0.5" class="form-control" placeholder="Rating(out of 5 in steps of 0.5)" name="farmerrating" min="0" max="5" style="margin-bottom: 5px;"/>
+                <input type="number" step="0.5" class="form-control" placeholder="Rating(out of 5 in steps of 0.5)" name="farmerrating" min="0" max="5" style="margin-bottom: 5px;" required/>
                 <div class="col">
                 <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 70%;">Submit rating</button>
               </div>
@@ -180,7 +180,7 @@
               </p>
             {{else}}
             <form action="save_rating/{{this.2._id}}" method="POST">
-                <input type="number" step="0.5" class="form-control" placeholder="Rating(out of 5 in steps of 0.5)" name="farmerrating" max="5" style="margin-bottom: 5px;"/>
+                <input type="number" step="0.5" class="form-control" placeholder="Rating(out of 5 in steps of 0.5)" name="farmerrating" max="5" style="margin-bottom: 5px;" required/>
                 <div class="col">
                 <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 70%;">Submit rating</button>
               </div>
