--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -146,7 +146,7 @@
     <div class="row" style="position: sticky; background-color: #302d42; margin: 0 20px 20px 20px;">
       <div class="col-lg-1 col-2"></div>
       <div class="col-lg-1 col-4">
-        <label style="font-size: 20px; color: white; margin-top: 12px; margin-bottom: 7px">Sort by:</label>
+        <label style="font-size: 20px; color: white; margin-top: 12px; margin-bottom: 7px">Search by:</label>
       </div>
       
       <div class="col-lg-4 col-6">
